# luarocks

./: .gitignore  CMakeLists.txt  config.in  dist.cmake  dist.info
lib/lua/luarocks/: site_config.lua
src/luarocks/: cfg.lua
